# CExpression-Calculator

./: .gitignore  CMakeLists.txt  README-en.md  README-es.md  README.md  calculator.c  calculator.h  main.c  token.h  vscode_build_debug.bat
cmake/: platform.cmake
doc/: Recursive-Descent-Parser-Explained.md  递归下降解析器原理详解.md
include/: calculator.h  command.h  lexer.h  parser.h  parser_debug.h  platform.h  token.h
src/: calculator.c  command.c  lexer.c  logger.c  main.c  parser.c
src/platform/: platform_linux.c  platform_mac.c  platform_win.c
test/: test_calculator.c
